src/db_ex/snapshots/app_db_schema__db_ex__db_test__bin_compare_obj_and_dbvalue-2.snap
---
source: src/db_ex/db_test.rs
expression: "serialize(serde_json::to_value(&ret).unwrap())"
---
Array [
    Object {
        "id": String("app:[UID]"),
        "name": String("adf"),
    },
]
