src/db_ex/snapshots/app_db_schema__db_ex__db_test__bin_compare_obj_and_dbvalue.snap
---
source: src/db_ex/db_test.rs
expression: "&serialize(serde_json::to_value(&i).unwrap())"
---
Object {
    "id": String("app:[UID]"),
    "name": String("adf"),
}
