src/db_ex/snapshots/app_db_schema__db_ex__db_test__compare_obj_and_dbvalue.snap
---
source: src/db_ex/db_test.rs
expression: "[serialize(i), serialize(&ret)]"
---
[
    Object {
        "id": String("app:[UID]"),
        "name": String("adf"),
    },
    Array [
        Object {
            "id": String("app:[UID]"),
            "name": String("adf"),
        },
    ],
]
