src/db_ex/snapshots/app_db_schema__db_ex__db_test__raw_db_relate.snap
---
source: src/db_ex/db_test.rs
expression: v
---
[
    Object(
        Object(
            {
                "id": Thing(
                    Thing {
                        tb: "identity",
                        id: String(
                            "[UID]",
                        ),
                    },
                ),
                "in": Thing(
                    Thing {
                        tb: "mobile",
                        id: Number(
                            123,
                        ),
                    },
                ),
                "out": Thing(
                    Thing {
                        tb: "account",
                        id: String(
                            "hz",
                        ),
                    },
                ),
            },
        ),
    ),
]
