src/db_ex/snapshots/app_db_schema__db_ex__db_test__value_serde_to_obj.snap
---
source: src/db_ex/db_test.rs
expression: "deserialize::<Vec<App>>(reset_bin.clone())"
---
[
    App {
        id: "app:[UID]",
        name: "adf",
    },
]
