src/db_ex/snapshots/app_db_schema__db_ex__db_test__vec_to_value.snap
---
source: src/db_ex/db_test.rs
expression: "IntoValue::into(i)"
---
Array(
    Array(
        [
            Object(
                Object(
                    {
                        "id": Strand(
                            Strand(
                                "app:[UID]",
                            ),
                        ),
                        "name": Strand(
                            Strand(
                                "adf",
                            ),
                        ),
                    },
                ),
            ),
        ],
    ),
)
